[project]
name = "two-tank-hydraulic-system-hybrid-lyapunov-pde-stabilization"
version = "0.1.0"
description = "Hybrid control for two-tank hydraulic system using Lyapunov function and PDE-based stabilization"
authors = [
    {name = "Didar Seyidov", email = "didar.seyidov@skoltech.ru"},
]
dependencies = [
    "numpy",
    "matplotlib",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
two_tank_local = "two_tank_local:main"
two_tank_hybrid = "two_tank_hybrid:main"
two_tank_comparison = "two_tank_comparison:main"
